Month Graph Wokring

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 
     <div class="form-group">
       <label for="Day">Day </label>
-      <input type="number" class="form-control" id="Day" placeholder="Day" name="day">
+      <input type="number" class="form-control" id="Day" placeholder="Day (Optional)" name="day">
     </div>
 
     <div>
